force-app/main/default/objects/p2s_base1__LeadStatusSetting__c/p2s_base1__LeadStatusSetting__c.object-meta.xml
<CustomObject>
    <label>Lead Status Setting</label>
    <nameField>
        <label>Lead Status</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Status Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>