force-app/main/default/objects/p2s_base1__LeadStatusSetting__c/fields/p2s_base1__AccountLifecycleStage__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__AccountLifecycleStage__c</fullName>
    <description>Enter the Lifecycle Stage that the Account will move to upon reaching the Lead Status</description>
    <inlineHelpText>Enter the Lifecycle Stage that the Account will move to upon reaching the Lead Status</inlineHelpText>
    <label>Account Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>p2s_base1__LifecycleStage</valueSetName>
    </valueSet>
</CustomField>