force-app/main/default/objects/p2s_base1__LeadStatusSetting__c/fields/p2s_base1__LIfecycleStage__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__LIfecycleStage__c</fullName>
    <description>Enter a Journey Stage that the Lead will move to upon reaching the Lead Status</description>
    <inlineHelpText>Enter the Journey Stage that the Lead will move to upon reaching the Lead Status</inlineHelpText>
    <label>Lead Journey Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>p2s_base1__LifecycleStage</valueSetName>
    </valueSet>
</CustomField>